--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "node": ">=0.10.3"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "^1.0.3",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-imagemin": "~0.1.4",
-    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-imagemin": "^2.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-sass": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.1",
+    "grunt-contrib-uglify": "^3.4.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-html-build": "^0.7.1",
     "grunt-minify-html": "^2.1.0",
-    "grunt-svg2png": "~0.2.0",
+    "grunt-svg2png": "^0.2.8",
     "grunt-svgmin": "~0.2.0"
   }
 }
